# smart-showcase

./: .gitignore  LICENSE  README.md  alembic.ini  pyproject.toml
alembic/: env.py
certs/: README.md
scripts/: generate_keys.py
src/: .env.template  main.py
src/core/: config.py
src/infra/: __init__.py  base.py
src/infra/security/: password_hasher.py
src/infrastructure/: database.py
src/modules/catalog/application/: services.py
src/modules/catalog/application/services/: __init__.py  category.py  product.py
src/modules/catalog/domain/: entities.py  exceptions.py
src/modules/catalog/domain/entities/: __init__.py  category.py  product.py
src/modules/catalog/infrastructure/: models.py  repositories.py
src/modules/catalog/infrastructure/models/: __init__.py  category.py  product.py
src/modules/catalog/infrastructure/repositories/: __init__.py  category.py  product.py
src/modules/catalog/presentation/api/: categories.py  products.py
src/modules/catalog/presentation/api/api_v1/: products.py
src/modules/catalog/presentation/schemas/: categories.py  products.py
src/modules/company/domain/entities/: company.py
src/modules/company/infrastructure/models/: __init__.py  company.py
src/modules/company/presentation/schemas/: companies.py
src/modules/user/application/interfaces/: __init__.py  password_hasher.py
src/modules/user/domain/entities/: role.py  user.py
src/modules/user/infrastructure/models/: __init__.py  role.py  user.py
src/modules/user/presentation/schemas/: role.py  user.py
(+3 files in other folders)
